- On Linux, allow exporting to sampled audio using Fluidsynth
- Fixed exporting midi track names (Alexis Archambault)
- Active dropping documents on the main frame on all OSes (Alexis Archambault)
- Improve look of loop button on Linux when using wx 2.9
- Add setting to remember window location
- Make Aria work correctly in OpenGL mode on Linux

1.4.0
- Fix shift + mouse wheel horizontal scrolling on windows
- Fixed bug when looping drums
- Support reading files with accents in their name on Windows
- Improve printing by setting appropriate caps to measure bars
- Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
- Fix rare memory leak
- Further tweak fonts on Windows
- Fix incorrect drumkit label when importing a midi file with manual channel management
- Improve exported midis to make it less likely that an additional empty measure will be appended at
  the end when opening the file in another midi application
- Fix toolbar glitch on Windows

1.3 beta 6
- Add basic loop feature
- Fix exporting to audio on OSX Lion
- Add option to check online for new versions of Aria
- Add Russian and Portuguese translations from Transifex
- Improve look on Windows
- Save the vertical scroll of each track
- Allow selecting default editor type in preferences
- Further improve magnetic grid
- Add "Duplicate track" feature
- Show a dialog asking user to restart Aria after changing soundfont
- Improvements to track default volume feature
- Improvements to score printing
- Pressing spacebar while recording now stops recording as intended
- Ability to print multiple views for the same track
- Fix bug when undoing shifting frets in guitar editor
- Add keyboard shortcuts for play/pause and record

1.3 beta 5
- Added support for selecting sound bank on OSX
- Fixed MIDI export when some notes have a volume of 0
- Spanish translation (thanks to Othyro)
- Fix double replace confirmation on OSX (Cocoa)